# Fitter

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Dockerfile  FileHandler.cpp  FileHandler.h  LICENSE  README.md  compile.sh  main.cpp  test_case_displaymenu
src/: App.cpp  App.h  FileHandler.cpp  FileHandler.h  Goal.cpp  Goal.h  Json.cpp  Json.h  Utils.cpp  Utils.h
src/database/: Database.cpp  Database.h
